--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/edzesterv
 spring.datasource.username=edzesterv
 spring.datasource.password=edzesterv
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.pyhsical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.port=9099
